--- a/Sections/gfs/gfs.tex
+++ b/Sections/gfs/gfs.tex
@@ -5,7 +5,8 @@ Its 2003 and a research paper by Sanjay Ghemawat, Howard Gobioff, and Shun-Tak L
 what would become the Google File System (GFS). In the early 2000s,
 Google rapidly expanded its workload, scaling to support services like,
 web search, indexing, and data analytics. Traditional file 
-systems were not suited for their needs. Hence, GFS was designed for the following:
+systems were not suited for their needs. Hence, GFS was designed for the following (Below you may find the GFS paper
+(\href{https://static.googleusercontent.com/media/research.google.com/en//archive/gfs-sosp2003.pdf}{Original Paper}):
 
 \begin{Def}[Design Goals of GFS]
   
@@ -231,8 +232,4 @@ Below we summarize the key points of GFS through an illustration:
   \label{fig:gfs-summary}
 \end{figure}
 
-
-\noindent
-Below you may find the GFS paper:\\
-\href{https://static.googleusercontent.com/media/research.google.com/en//archive/gfs-sosp2003.pdf}{https://static.googleusercontent.com/media/research.google.com/en//archive/gfs-sosp2003.pdf}
 
