--- a/main.tex
+++ b/main.tex
@@ -73,7 +73,8 @@
 % \input{Sections/shard/shard.tex}
 % \input{Sections/mapreduce/mapreduce.tex}
 % \input{Sections/gfs/gfs.tex}
-\input{Sections/dyn/dyn.tex}
+% \input{Sections/dyn/dyn.tex}
+\input{Sections/span/span.tex}
 
 \bibliographystyle{plain} % We choose the "plain" reference style
 \bibliography{refs} % Entries are in the refs.bib file
