--- a/Sections/consist/consist.tex
+++ b/Sections/consist/consist.tex
@@ -351,7 +351,7 @@ Recall that linearizability deals with real-time ordering of locks.
 
 \noindent
 To emphasize:
-\begin{theo}[consistency Model Implications]
+\begin{theo}[Consistency Model Implications]
 
     The following implications hold among consistency models:
 
