began summary up to concensus

--- a/Configs/configs.tex
+++ b/Configs/configs.tex
@@ -8,6 +8,7 @@
 \input{Configs/code.tex} % This file contains the code for the code listings
 \usepackage{adjustbox} % Required for fitting tables into the page width
 \usepackage{dirtree} % Required for drawing directory trees
+\usepackage{multicol}
 
 % Packages for math symbols and images
 \usepackage{amssymb} % Math symbols such as \mathbb
