--- a/Sections/consist/consist.tex
+++ b/Sections/consist/consist.tex
@@ -205,7 +205,7 @@ Consider the following \textbf{Weak} methods of handling shared data:
     
     These methods require explicit use of locks to propagate updates:\\
     \textbf{Release Consistency:} Push updates to all nodes after releasing the lock.\\
-    \textbf{Lazy-release Consistency:} Push updates to all nodes after the lock is acquired.
+    \textbf{Lazy-release Consistency:} Push updates to the next node who acquires the same lock.
     \textit{Though this may provide less stress to the system, if the client does not lock data, it may become stale (weak consistency).
     Alternatively, if the client locks all data (strong consistency) though it may be costly. }\underline{\textbf{These both are weak consistency models.}}
 \end{Def}
